# WeChat-MCP

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: README.md  auto-replier.md
.github/workflows/: publish.yml
docs/: README_zh.md  detailed-guide.md
src/wechat_mcp/: add_contact_by_wechat_id_utils.py  fetch_messages_by_chat_utils.py  mcp_server.py  publish_moment_utils.py  reply_to_messages_by_chat_utils.py  wechat_accessibility.py
tests/: manual_publish_moment_test.py  test_add_contact.py  test_fetch_messages.py  test_publish_moment.py  test_reply_to_messages.py  tools_smoke_script.py
